# Ticker

./: .env.example  .gitignore  README.md  pyproject.toml
data/fixtures/: ptr_davidson_2025-08-18.txt  ptr_pelosi_2025-08-20.txt  ptr_schumer_2025-08-21.txt
ticker/: cli.py  config.py  db.py  hotpath.py  models.py  stats.py  watch.py
ticker/enrich/: committees.py  members.py
ticker/fetch/: house.py  senate.py
ticker/fixtures/: committees.csv  company_tickers_sample.json  house_filings.json  member_committees.csv  members.csv  senate_filings.json
ticker/mapsec/: issuers.py  sec_cik.py
ticker/notify/: alerts.py
ticker/parse/: pdf.py  ptr.py
ticker/score/: signals.py
ticker/tui/: app.py
ticker/utils/: logging.py  text.py
